# OnsetIniPlugin

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  HandleManager.cpp  HandleManager.hpp  Plugin.cpp  Plugin.hpp  PluginInterface.cpp  ini.hpp
